Link address added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>Sudhir's Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
@@ -64,23 +64,27 @@
             </div>
         </div>
     </section>
-
     <!-- services section start -->
     <section class="services" id="services">
         <div class="max-width">
             <h2 class="title">My Projects</h2>
             <div class="serv-content">
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">PEAKFIT</div>
-                        <p>Made with HTML, CSS & JavaScript
+                <!-- Wrap the PeakFit card inside an <a> tag to make the whole card clickable -->
+                <a href="https://sudhirkrsingh0601.github.io/PeakFit/" target="_blank" class="card-link">
+                    <div class="card">
+                        <div class="box">
+                            <i class="fas fa-paint-brush"></i>
+                            <div class="text">PEAKFIT</div>
+                            <p>Made with HTML, CSS & JavaScript
 
-                            A Platform for aspiring Athletes
-                            It will connect people with mentors from all around the world
-                            This platform is a one stop solution for any person want to persue a particular sport</p>
+                                A Platform for aspiring Athletes
+                                It will connect people with mentors from all around the world
+                                This platform is a one-stop solution for any person wanting to pursue a particular sport
+                            </p>
+                        </div>
                     </div>
-                </div>
+                </a>
+                <!-- Other cards remain the same -->
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
@@ -89,7 +93,8 @@
 
                             This platform helps in the data entry of Hospitals
                             Patients can enter their details and occupy rooms
-                            Doctors can check patient's details and can give prescription accordingly</p>
+                            Doctors can check patient's details and can give prescription accordingly
+                        </p>
                     </div>
                 </div>
                 <div class="card">
@@ -99,10 +104,10 @@
                         <p>It is a clone of a shopping website.</p>
                     </div>
                 </div>
-               </div>
             </div>
         </div>
     </section>
+
 
     <!-- skills section start -->
     <section class="skills" id="skills">
