--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Sudhir Kumar Singh</div>
                 <div class="text-3">And I'm a student of SRM Ktr<span class="typing"></span></div>
-                <a href="http://127.0.0.1:5500/Resume/index1.html" target="_blank">RESUME</a>
+                <a href="https://sudhirkrsingh0601.github.io/Sudhir_resume/" target="_blank">RESUME</a>
             </div>
         </div>
     </section>
