--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                     <p>Undergraduate student at SRM University, Kattankulathur, pursuing a B.Tech in Computer Science and Engineering. Passionate about technology and programming, with a strong interest in software development and problem-solving. Eager to apply academic knowledge in real-world projects and contribute to innovative solutions. Seeking opportunities to grow and enhance technical skills.</p>
                     <div class="social-links"> 
                         <a href="https://www.instagram.com/sudhirrr_singh?igsh=NTNiZWxqd2tnOGx1" target="_blank" class="social-btn instagram">Instagram</a>
-                        <a href="www.linkedin.com/in/sudhir-kumar-singh" target="_blank" class="social-btn linkedin">Linkedin</a>
-                        <a href="https://www.Github.com/yourprofile" target="_blank" class="social-btn github">Github</a>
-                        <a href="http://127.0.0.1:5500/Resume/index1.html" target="_blank" class="social-btn resume">Resume</a>
+                        <a href="https://www.linkedin.com/in/sudhir-kumar-singh/" target="_blank" class="social-btn linkedin">Linkedin</a>
+                        <a href="https://github.com/sudhirkrsingh0601" target="_blank" class="social-btn github">Github</a>
+                        <a href="https://sudhirkrsingh0601.github.io/Sudhir_resume/" target="_blank" class="social-btn resume">Resume</a>
                     </div>
                 </div>
             </div>
